--- a/index.html
+++ b/index.html
@@ -105,14 +105,6 @@
     <!-- / sec_product -->
 
     <!-- sec_practics -->
-    <!-- <section class="sec sec_practics">
-        <div class="container">
-
-        </div>
-    </section> -->
-    <!-- / sec_practics -->
-
-    <!-- sec_practics -->
     <section class="sec sec_practics media_wrapp" id="practics">
         <div class="container">
             <div class="sec_title">
@@ -477,6 +469,147 @@
         </div>
     </section>
     <!-- / sec_video_author -->
+
+    <!-- sec_tariffs -->
+    <section id="sec_tariffs" class="sec sec_tariffs bg-green">
+        <div class="container">
+            <!-- <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
+                        <img alt="" class="abs_pic dubl_line_vertical2" src="img/abs_pic/dubl_line.svg"> -->
+            <div class="sec_title">
+                <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
+                <h2>Практикум LMS Booster: 12 шагов к Х-кратному росту ведет Константин Лашкевич</h2>
+                <p>Основатель и идеолог позитивного менеджмента</p>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="card table-responsive">
+                        <table class="table table-bordered">
+                            <thead class="table-success">
+                                <tr>
+                                    <th scope="col"></th>
+                                    <th scope="col">Стажер</th>
+                                    <th scope="col">Менеджер</th>
+                                    <th scope="col">ТОП <br> Менеджер</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th>Доступ к 12 шагам к Х-кратному росту</th>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                                <tr>
+                                    <th>Возможность выиграть призы</th>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                                <tr>
+                                    <th>Групповое обучение </th>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                                <tr>
+                                    <th>Доступ к 12+ документам и чек-листам</th>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                                <tr>
+                                    <th>Доступ к закрытой сети для нетворкинга</th>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                                <tr>
+                                    <th>Инструмент создания личного бренда</th>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                                <tr>
+                                    <th>Проверка домашних заданий экспертами АКР</th>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                                <tr>
+                                    <th>Закрытый чат вопрос-ответ с Константином и экспертами АКР</th>
+                                    <td></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                                <tr>
+                                    <th>Участие в 2-х закрытых закрытой мастермаинд встречах</th>
+                                    <td></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                                <tr>
+                                    <th>Сертификат о прохождении курса</th>
+                                    <td></td>
+                                    <td></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                                <tr>
+                                    <th>Обратная связь по домашним заданиям от Константина лично</th>
+                                    <td></td>
+                                    <td></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                                <tr>
+                                    <th>Личная консультация от Константина </th>
+                                    <td></td>
+                                    <td></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                                <tr>
+                                    <th>Интеграция и PR в социальных сетях (при условии хороших показателей обучения) </th>
+                                    <td></td>
+                                    <td></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                                <tr>
+                                    <th>Возможность попасть на радары к лучшим Хантерам России </th>
+                                    <td></td>
+                                    <td></td>
+                                    <td><img src="img/icons/ok-orange.svg" alt="ok"></td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr class="table-footer">
+                                    <th>
+                                        countdown
+                                    </th>
+                                    <td>
+                                        <span class="text-green">Регулярная стоимость</span>
+                                        <span class="price">$250</span>
+                                        <a href="#" class="btn btn-success">Купить</a>
+                                        <span class="text-gray">Осталось 20 мест</span>
+                                    </td>
+                                    <td>
+                                        <span class="text-green">Регулярная стоимость</span>
+                                        <span class="price">$400</span>
+                                        <a href="#" class="btn btn-success">Купить</a>
+                                        <span class="text-gray">Осталось 20 мест</span>
+                                    </td>
+                                    <td>
+                                        <span class="text-green">Регулярная стоимость</span>
+                                        <span class="price">$1500</span>
+                                        <a href="#" class="btn btn-success">Купить</a>
+                                        <span class="text-gray">Осталось 20 мест</span>
+                                    </td>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_tariffs -->
 
     <!-- sec_video_review -->
     <section class="sec sec_video_review" id="video_review">
