--- a/index.html
+++ b/index.html
@@ -581,7 +581,8 @@
                             <tfoot>
                                 <tr class="table-footer">
                                     <th>
-                                        countdown
+                                            <p class="timer__title">До старта курса осталось:</p>
+                                            <div id="countdown2" data-cookies="nope" data-date="2019,11,21,21" class="simpleCountdown header__timer"></div>
                                     </th>
                                     <td>
                                         <span class="text-green">Регулярная стоимость</span>
@@ -1402,6 +1403,7 @@
     </script>
     <script src="js/lightslider.min.js"></script>
     <script src="js/intlTelInput.min.js"></script>
+    <script src="js/jquery.countdown.js"></script>
     <script src="js/main.js"></script>
 </body>
 
