ready main landing

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Получить доступ</a>
+                <a href="#sec_tariffs" class="btn btn-success-2 my-2 my-sm-0">Получить доступ</a>
             </form>
         </div>
     </nav>
@@ -88,7 +88,7 @@
                         </ul>
                         <div class="card__footer">
                             <a href="#practics" class="btn btn-success">Узнать Подробнее</a>
-                            <a href="#" class="btn btn-success">Принять участие</a>
+                            <a href="#sec_tariffs" class="btn btn-success">Принять участие</a>
                         </div>
                     </div>
                     <a class="btn-video-modal" data-toggle="modal" data-target="#videoModal"><img
@@ -300,7 +300,7 @@
                             результат твоих действий.</p>
                         <h2>А страх - это всего лишь глупые мысли в твоей голове, которые нужно "Выбросить"! </h2>
                         <p class="under-title">Когда я это сделал - я стал расти с <br> огромной скоростью! </p>
-                        <a href="" class="btn btn-success">Хочу стать ТОП-менеджером!</a>
+                        <a href="#sec_tariffs" class="btn btn-success">Хочу стать ТОП-менеджером!</a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -436,7 +436,7 @@
                         <li><img src="img/lms_booster/ok_2.svg" alt="ok">Инвестор и партнер в проекте "Smart Expert",
                             автор методологии Позитивный Менеджмент</li>
                     </ul>
-                    <a href="" class="btn btn-success">Хочу расти</a>
+                    <a href="#sec_tariffs" class="btn btn-success">Хочу расти</a>
                     <p class="text-orange">И работать над карьерой с Константином!</p>
                 </div>
                 <div class="col-md-5">
@@ -482,7 +482,9 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <div class="card table-responsive">
+
+                    <!-- PC tariffs -->
+                    <div class="card table-responsive d-none d-md-block">
                         <table class="table table-bordered">
                             <thead class="table-success">
                                 <tr>
@@ -581,30 +583,115 @@
                             <tfoot>
                                 <tr class="table-footer">
                                     <th>
-                                            <p class="timer__title">До старта курса осталось:</p>
-                                            <div id="countdown2" data-cookies="nope" data-date="2019,11,21,21" class="simpleCountdown header__timer"></div>
+                                        <p class="timer__title">До старта курса осталось:</p>
+                                        <div id="countdown2" data-cookies="nope" data-date="2019,11,21,21" class="simpleCountdown header__timer"></div>
                                     </th>
                                     <td>
                                         <span class="text-green">Регулярная стоимость</span>
                                         <span class="price">$250</span>
-                                        <a href="#" class="btn btn-success">Купить</a>
+                                        <a href="lmsbooster.com/intern" target="_blank" class="btn btn-success">Забронировать</a>
                                         <span class="text-gray">Осталось 20 мест</span>
                                     </td>
                                     <td>
                                         <span class="text-green">Регулярная стоимость</span>
                                         <span class="price">$400</span>
-                                        <a href="#" class="btn btn-success">Купить</a>
+                                        <a href="lmsbooster.com/manager" target="_blank" class="btn btn-success">Забронировать</a>
                                         <span class="text-gray">Осталось 20 мест</span>
                                     </td>
                                     <td>
                                         <span class="text-green">Регулярная стоимость</span>
                                         <span class="price">$1500</span>
-                                        <a href="#" class="btn btn-success">Купить</a>
+                                        <a href="lmsbooster.com/top-manager" target="_blank" class="btn btn-success">Забронировать</a>
                                         <span class="text-gray">Осталось 20 мест</span>
                                     </td>
                                 </tr>
                             </tfoot>
                         </table>
+                    </div>
+
+                    <!-- MOBIILE tariffs -->
+                    <div class="mob_tariffs d-block d-md-none">
+                        <div class="card">
+                            <div class="card-header">
+                                Стажер
+                            </div>
+                            <div class="card-body">
+                                <ul>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Доступ к 12 шагам к Х-кратному росту </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Возможность выиграть призы </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Групповое обучение </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Доступ к 12+ документам и чек-листам </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Доступ к закрытой сети для нетворкинга </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Инструмент создания личного бренда </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Проверка домашних заданий экспертами АКР </li>
+                                </ul>
+                            </div>
+                            <div class="card-footer">
+                                <span class="text-green">Регулярная стоимость</span>
+                                <span class="price">$250</span>
+                                <a href="lmsbooster.com/intern" target="_blank" class="btn btn-success">Забронировать</a>
+                                <span class="text-gray">Осталось 20 мест</span>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                Менеджер
+                            </div>
+                            <div class="card-body">
+                                <ul>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Доступ к 12 шагам к Х-кратному росту </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Возможность выиграть призы </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Групповое обучение </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Доступ к 12+ документам и чек-листам </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Доступ к закрытой сети для нетворкинга </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Инструмент создания личного бренда </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Проверка домашних заданий экспертами АКР </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Закрытый чат вопрос-ответ с Константином и экспертами АКР </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Участие в 2-х закрытых закрытой мастермаинд встречах </li>
+                                </ul>
+                            </div>
+                            <div class="card-footer">
+                                <span class="text-green">Регулярная стоимость</span>
+                                <span class="price">$400</span>
+                                <a href="lmsbooster.com/manager" target="_blank" class="btn btn-success">Забронировать</a>
+                                <span class="text-gray">Осталось 20 мест</span>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                ТОП Менеджер
+                            </div>
+                            <div class="card-body">
+                                <ul>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Доступ к 12 шагам к Х-кратному росту </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Возможность выиграть призы </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Групповое обучение </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Доступ к 12+ документам и чек-листам </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Доступ к закрытой сети для нетворкинга </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Инструмент создания личного бренда </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Проверка домашних заданий экспертами АКР </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Закрытый чат вопрос-ответ с Константином и экспертами АКР </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Участие в 2-х закрытых закрытой мастермаинд встречах </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Сертификат о прохождении курса </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Обратная связь по домашним заданиям от Константина лично </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Личная консультация от Константина </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Интеграция и PR в социальных сетях (при условии хороших показателей обучения) </li>
+                                    <li><img src="img/icons/ok.svg" alt="ok"> Возможность попасть на радары к лучшим Хантерам России </li>
+                                </ul>
+                            </div>
+                            <div class="card-footer">
+                                <span class="text-green">Регулярная стоимость</span>
+                                <span class="price">$1500</span>
+                                <a href="lmsbooster.com/top-manager" target="_blank" class="btn btn-success">Забронировать</a>
+                                <span class="text-gray">Осталось 20 мест</span>
+                            </div>
+                        </div>
+                        <!-- <div class="card">
+                            <div class="card-body">
+                                <p class="timer__title">До старта курса осталось:</p>
+                                <div id="countdown2" data-cookies="nope" data-date="2019,11,21,21" class="simpleCountdown header__timer"></div>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -861,7 +948,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="" class="btn btn-success btn-lg w-100 mt-5">Хочу стать ТОП-менеджером!</a>
+                    <a href="#sec_tariffs" class="btn btn-success btn-lg w-100 mt-5">Хочу стать ТОП-менеджером!</a>
                 </div>
             </div>
         </div>
@@ -1037,7 +1124,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 m-0">
-                    <a href="" class="btn btn-success btn-lg w-100">Участвовать в LMS Booster</a>
+                    <a href="#sec_tariffs" class="btn btn-success btn-lg w-100">Участвовать в LMS Booster</a>
                 </div>
             </div>
         </div>
