--- a/index.html
+++ b/index.html
@@ -589,19 +589,19 @@
                                     <td>
                                         <span class="text-green">Регулярная стоимость</span>
                                         <span class="price">$250</span>
-                                        <a href="lmsbooster.com/intern" target="_blank" class="btn btn-success">Забронировать</a>
+                                        <a href="http://lmsbooster.com/intern" target="_blank" class="btn btn-success">Забронировать</a>
                                         <span class="text-gray">Осталось 20 мест</span>
                                     </td>
                                     <td>
                                         <span class="text-green">Регулярная стоимость</span>
                                         <span class="price">$400</span>
-                                        <a href="lmsbooster.com/manager" target="_blank" class="btn btn-success">Забронировать</a>
+                                        <a href="http://lmsbooster.com/manager" target="_blank" class="btn btn-success">Забронировать</a>
                                         <span class="text-gray">Осталось 20 мест</span>
                                     </td>
                                     <td>
                                         <span class="text-green">Регулярная стоимость</span>
                                         <span class="price">$1500</span>
-                                        <a href="lmsbooster.com/top-manager" target="_blank" class="btn btn-success">Забронировать</a>
+                                        <a href="http://lmsbooster.com/top-manager" target="_blank" class="btn btn-success">Забронировать</a>
                                         <span class="text-gray">Осталось 20 мест</span>
                                     </td>
                                 </tr>
@@ -629,7 +629,7 @@
                             <div class="card-footer">
                                 <span class="text-green">Регулярная стоимость</span>
                                 <span class="price">$250</span>
-                                <a href="lmsbooster.com/intern" target="_blank" class="btn btn-success">Забронировать</a>
+                                <a href="http://lmsbooster.com/intern" target="_blank" class="btn btn-success">Забронировать</a>
                                 <span class="text-gray">Осталось 20 мест</span>
                             </div>
                         </div>
@@ -653,7 +653,7 @@
                             <div class="card-footer">
                                 <span class="text-green">Регулярная стоимость</span>
                                 <span class="price">$400</span>
-                                <a href="lmsbooster.com/manager" target="_blank" class="btn btn-success">Забронировать</a>
+                                <a href="http://lmsbooster.com/manager" target="_blank" class="btn btn-success">Забронировать</a>
                                 <span class="text-gray">Осталось 20 мест</span>
                             </div>
                         </div>
@@ -682,7 +682,7 @@
                             <div class="card-footer">
                                 <span class="text-green">Регулярная стоимость</span>
                                 <span class="price">$1500</span>
-                                <a href="lmsbooster.com/top-manager" target="_blank" class="btn btn-success">Забронировать</a>
+                                <a href="http://lmsbooster.com/top-manager" target="_blank" class="btn btn-success">Забронировать</a>
                                 <span class="text-gray">Осталось 20 мест</span>
                             </div>
                         </div>
