--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-- fixed header -->
+    <!-- fixed header  -->
     <nav class="navbar navbar-expand-md fixed-top">
         <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -136,7 +136,7 @@
             <div class="card with-date">
                 <img alt="" class="abs_pic stone" src="img/abs_pic/stone_orange.svg">
                 <div class="media align-items-center">
-                    <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img1.jpg" alt="Generic placeholder image">
+                  <!--  <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img1.jpg" alt="Generic placeholder image"> -->
                     <div class="media-body">
                         <p class="card_subtitle">Коучинг для родителей</p>
                         <h4 class="card_title">Воспитание с удовольствием</h4>
