--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
     </section> -->
     <!-- / sec_12 -->
     <!-- footer -->
-<!--    <footer class="sec">
+    <footer class="sec">
         <div class="container">
             <nav>
                 <span>SmartExpert Copyright 2019</span>
@@ -523,7 +523,7 @@
                 <a href="">Политика конфедициальности</a>
             </nav>
         </div>
-    </footer> -->
+    </footer>
     <!-- / footer -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
