--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="img/logo.png" width="35px" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -61,9 +61,6 @@
                             <li><img src="img/sec_1/ok.svg" alt="ok">Участие в рыболовных соревнованиях по дисциплине “Ловля донной удочкой”. Самое высокое место на данный момент 21 из 58 участников.</li>
 
                         </ul>
-                    </div>
-                    <div class="works">
-                        <img src="img/sec_1/work_1.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-4">
