logo and img fixes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header  -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><b>Шустер</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -136,7 +136,7 @@
             <div class="card with-date">
                 <img alt="" class="abs_pic stone" src="img/abs_pic/stone_orange.svg">
                 <div class="media align-items-center">
-                  <!--  <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img1.jpg" alt="Generic placeholder image"> -->
+                    <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img1.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <p class="card_subtitle">Коучинг для родителей</p>
                         <h4 class="card_title">Воспитание с удовольствием</h4>
@@ -146,10 +146,6 @@
                         <div class="dropdown-divider"></div>
                         <div class="b-card-footer">
                             <div class="counter"></div>
-                            <div class="views">
-                                <img class="mr-1" src="img/icons/human.svg">
-
-                            </div>
                             <a class="link btn btn-blue" href="#">Подробнее</a>
                         </div>
                     </div>
@@ -242,7 +238,7 @@
                             <tr>
                                 <th scope="row">1</th>
                                 <td>
-                                    <a href="#" class="media">
+                                    <a href="https://p.smartexpert.net/social/ask" class="media">
                                         <img src="img/sec_my_contacts/vitaliy.jpg" alt="">
                                         <span>Виталий Тимошенко</span>
                                     </a>
@@ -251,7 +247,7 @@
                                 <td>26</td>
                                 <td>26</td>
                                 <td>26</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                                <td class="text-right"><a href="https://p.smartexpert.net/social/ask" class="btn btn-blue">Подробнее</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">2</th>
@@ -270,44 +266,16 @@
                             <tr>
                                 <th scope="row">3</th>
                                 <td>
-                                    <a href="#" class="media">
-                                        <img src="img/sec_my_contacts/vitaliy_d.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
+                                    <a href="https://p.smartexpert.net/social/laflordenatalia" class="media">
+                                        <img src="img/sec_my_contacts/natalia.png " alt="">
+                                        <span>Наташа Флорес</span>
                                     </a>
                                 </td>
-                                <td class="expertise">Управление, Менеджмент, командообразование</td>
+                                <td class="expertise">Женский коуч, спикер, радиоведущая на испанском радио.</td>
                                 <td>26</td>
                                 <td>26</td>
                                 <td>54</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">4</th>
-                                <td>
-                                    <a href="#" class="media">
-                                        <img src="img/sec_my_contacts/igor.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
-                                    </a>
-                                </td>
-                                <td class="expertise">Маркетинг, личный бренд, ораторство, коучинг </td>
-                                <td>26</td>
-                                <td>26</td>
-                                <td>6</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">5</th>
-                                <td>
-                                    <a href="#" class="media">
-                                        <img src="img/sec_my_contacts/iomtov.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
-                                    </a>
-                                </td>
-                                <td class="expertise">Финансы, Доходы, Деньги, Состояние, Счастье</td>
-                                <td>26</td>
-                                <td>26</td>
-                                <td>11</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                                <td class="text-right"><a href="https://p.smartexpert.net/social/laflordenatalia" class="btn btn-blue">Подробнее</a></td>
                             </tr>
                         </tbody>
                     </table>
@@ -435,18 +403,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 card_wrapp">
-                    <div class="card_product">
-                        <img src="img/sec_my_articles/img_9.png" alt="">
-                        <div class="card_body">
-                            <h4>Ты чего себе надумал?</h4>
-                            <span class="date">7 мая 2019 г. Рафаэль Шустер</span>
-                            <div class="hr"></div>
-                            <span class="tags">Воспитание, Забота, Психология, Мышление, Отношения</span>
-                            <a href="https://5sfer.com/24621-ty-chego-sebe-nadumal.html" class="btn btn-blue">Читать полностью</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -472,14 +428,6 @@
                             <iframe src="https://www.youtube.com/embed/3_klPPMZPoY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <p>Не смотри на меня</p>
-                    </div>
-                </div>
-                <div class="col-md-6 card_wrapp">
-                    <div class="card">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe src="https://www.youtube.com/embed/6FAm0R4AOEc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-                        <p>Системы воспитания</p>
                     </div>
                 </div>
             </div>
